Issue #3391395: Component Fixes

--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-button.html.twig
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-button.html.twig
@@ -31,11 +31,13 @@
 #}
 {%
   set classes = [
-  'block',
-  'block-' ~ configuration.provider|clean_class,
-  'block-' ~ plugin_id|clean_class,
-]
+    'block',
+    'block-' ~ configuration.provider|clean_class,
+    'block-' ~ plugin_id|clean_class,
+    'button-align-' ~ content.field_provus_button_arrangement['#items'].getString(),
+  ]
 %}
+
 <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if label %}
@@ -43,29 +45,6 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    <div class="{{ orientation }}-tabs" id="tabs{{ id }}">
-      <ul class="nav nav-tabs {{ orientation }}-tabs__menu" role="tablist">
-        {# Loops through the tab sections to print the tab section titles. #}
-        {% for key, item in items %}
-          {% if key|first != '#' %}
-            <li class="nav-item {{ orientation }}-tabs__menu-item" role="presentation">
-              <a aria-controls="tab-{{ id }}-{{ key + 1 }}" class="nav-link tab-clickable {% if loop.first %}active{% endif %}" data-bs-target="#tab-{{ id }}-{{ key + 1 }}" id="tab-{{ id }}-{{ key + 1 }}-tab" href="#" data-bs-toggle="tab" role="tab">
-                {{ item.title }}
-              </a>
-            </li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-      <div class="tab-content {{ orientation }}-tabs__content">
-        {# Loops through the tab sections again to print the tab section bodies. #}
-        {% for key, item in items %}
-          {% if key|first != '#' %}
-            <div role="tabpanel" class="tab-pane {{ orientation }}-tabs__pane fade{% if loop.first %} active show{% endif %}" id="tab-{{ id }}-{{ key + 1 }}">
-              {{ item.content }}
-            </div>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </div>
+    {{ content.field_provus_links }}
   {% endblock %}
 </div>
