--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-heading.html.twig
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-heading.html.twig
@@ -37,7 +37,7 @@
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
-  <div class="header-align-{{ alignment }} line-{{ decorative_line }}">
+  <div class="header-align-{{ content.field_provus_alignment.0 }} line-{{ content.field_provus_decorative_line.0 }}">
     {{ title_prefix }}
     {% if label %}
       <h2{{ title_attributes }}>{{ label }}</h2>
