--- a/web/themes/custom/provus_bootstrap/scss/components/_buttons.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_buttons.scss
@@ -17,6 +17,17 @@
   &-small {
     padding: rem-calc(6);
   }
+  &-default {
+    border: 1px solid $card-border-color;
+    background: $white;
+    &:hover,
+    &:focus {
+      border: 1px solid $card-border-dark;
+    }
+    &:focus {
+      box-shadow: 0px 0px 0px 3px rgba(86, 97, 129, 0.08);
+    }
+  }
   &-primary {
     background: $primary;
     color: $white;
@@ -56,6 +67,9 @@
     display: inline-block;
     margin-right: $card-spacing;
   }
+  svg.svg-inline--fa {
+    margin-right: rem-calc(10);
+  }
 }
 
 .btn-outline {
@@ -90,5 +104,25 @@
     visibility: visible;
     width: rem-calc(20);
     height: rem-calc(25);
+  }
+}
+
+.button-align {
+  &-inline {
+    .field {
+      display: flex;
+      .field__item {
+        margin-right: rem-calc(15);
+      }
+    }
+  }
+  &-stacked {
+    .field {
+      display: flex;
+      flex-direction: column;
+      .field__item {
+        margin-bottom: rem-calc(15);
+      }
+    }
   }
 }
