--- a/web/themes/custom/provus_bootstrap/scss/global/_variables.scss
+++ b/web/themes/custom/provus_bootstrap/scss/global/_variables.scss
@@ -66,6 +66,7 @@ $font-size-base: 1rem;
 $card-border-radius: .25rem;
 $card-spacing: 1.25rem;
 $card-border-color: #E7E8E9;
+$card-border-dark: #D9DBDD;
 
 // HR Color
 $hr-color: $text-primary;
