--- a/web/themes/custom/provus_bootstrap/scss/layout/_navigation.scss
+++ b/web/themes/custom/provus_bootstrap/scss/layout/_navigation.scss
@@ -4,7 +4,7 @@
   gap: rem-calc(20);
   .nav-item {
     .nav-link {
-      color: $primary-medium;
+      color: $primary-accent;
       font-size: rem-calc(15);
       line-height: rem-calc(22);
       padding: 0;
