--- a/web/themes/custom/provus_bootstrap/scss/layout/_sections.scss
+++ b/web/themes/custom/provus_bootstrap/scss/layout/_sections.scss
@@ -104,7 +104,7 @@
                 }
               }
               &:hover {
-                background: $primary-medium;
+                background: $primary-accent;
                 color: $white;
               }
             }
