--- a/web/themes/custom/provus_bootstrap/scss/layout/_header.scss
+++ b/web/themes/custom/provus_bootstrap/scss/layout/_header.scss
@@ -7,7 +7,7 @@
 
 // Top nav provus styles
 #navbar-top {
-  background: $primary-medium;
+  background: $primary-accent;
   padding: .5rem 1rem;
   > .container {
     justify-content: flex-end;
@@ -50,7 +50,7 @@
   position: relative;
   display: flex;
   .nav-link {
-    color: $primary-medium;
+    color: $primary-accent;
     position: relative;
     z-index: 99;
     width: rem-calc(50);
