3406385: Move add block to left instead of right

--- a/web/themes/custom/provus_bootstrap/scss/admin/_layout_builder.scss
+++ b/web/themes/custom/provus_bootstrap/scss/admin/_layout_builder.scss
@@ -1380,3 +1380,19 @@ a > .layout-builder__link-wrapped {
     }
   }
 }
+
+body.js-off-canvas-dialog-open::after {
+  content: '';
+  background: rgba(255,255,255,.9);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 100;
+}
+
+#drupal-off-canvas-wrapper {
+  left: rem-calc(66) !important;
+  width: rem-calc(252) !important;
+}
