PSPRO01-566: Accordion plus minus styling fixes.

--- a/web/themes/custom/provus_bootstrap/scss/components/_accordion.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_accordion.scss
@@ -36,6 +36,10 @@
         font-size: rem-calc(24);
         margin-right: rem-calc(16);
       }
+      .svg-inline--fa {
+        width: rem-calc(14);
+        height: rem-calc(16);
+      }
       &.collapsed {
         border-radius: 0;
         .fa-minus {
