Issue 3413237: Add icon left card and list.

--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-card--provus-display-provus-card-icon-left.html.twig
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-card--provus-display-provus-card-icon-left.html.twig
@@ -31,38 +31,38 @@
 #}
 {%
   set classes = [
-  'block',
-  'block-' ~ configuration.provider|clean_class,
-  'block-' ~ plugin_id|clean_class,
-]
+    'block',
+    'block-' ~ configuration.provider|clean_class,
+    'block-' ~ plugin_id|clean_class,
+    'card-wrapper',
+    'provus-card-icon-left',
+  ]
 %}
+
 <div{{ attributes.addClass(classes) }}>
-  {% if content.field_provus_link[0]['#url'] %}
-    <a href="{{ content.field_provus_link[0]['#url'] }}">
-  {% endif %}
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    <div class="list">
-      <div class="list-icon">
-        {{ content.field_provus_icon }}
-      </div>
-      <div class="list-text">
-        <div class="list-text-title">
-          {{ content.field_provus_title }}
-        </div>
-        {% if content.field_provus_body %}
-          <div class="list-text-text">
-            {{ content.field_provus_body }}
+      <div class="list">
+        {% if content.field_provus_media_image|render %}
+          <div class="list-icon">
+            <div class="card-img img-fluid">
+              {{ content.field_provus_media_image }}
+            </div>
           </div>
         {% endif %}
-      </div>
+        <div class="list-text">
+            {% if content.field_provus_title|render %}
+              <h3 class="list-text-title">{{ content.field_provus_title }}</h3>
+            {% endif %}
+            {% if content.field_provus_body|render %}
+              <div class="list-text-text">{{ content.field_provus_body }}</div>
+            {% endif %}
+            {{ content|without('field_provus_title', 'field_provus_body', 'field_provus_media_image', 'field_provus_header') }}
+        </div>
     </div>
   {% endblock %}
-  {% if content.field_provus_link[0]['#url'] %}
-    </a>
-  {% endif %}
 </div>
