--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-list.html.twig
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-list.html.twig
@@ -36,7 +36,7 @@
   'block-' ~ plugin_id|clean_class,
 ]
 %}
-{%  set rowclass = 'row row-cols-' ~ group_number  %}
+{%  set rowclass = 'row row-cols-1 row-cols-sm-' ~ group_number  %}
 <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if label %}
