--- a/web/themes/custom/provus_bootstrap/scss/components/_accordion.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_accordion.scss
@@ -67,6 +67,7 @@
   }
   .accordion-collapse {
     padding: rem-calc(20 170 20 110);
+    @include text-style-body-body-1();
     @include media-breakpoint-down(md) {
       padding: rem-calc(20 36 20 36);
     }
