--- a/web/themes/custom/provus_bootstrap/scss/components/_cards.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_cards.scss
@@ -1,6 +1,5 @@
 // Card styles.
 .card-wrapper {
-  height: calc(100% - 20px);
   width: 100%;
   margin-bottom: 20px;
 }
@@ -233,6 +232,7 @@
         height: 100%;
         width: auto;
         margin-top: 0;
+        margin-right: rem-calc(612);
       }
     }
   }
