--- a/web/themes/custom/provus_bootstrap/scss/components/_tabs.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_tabs.scss
@@ -77,6 +77,7 @@ nav.tabs ul {
 .block-provus-tabs {
   .horizontal-tabs {
     display: block;
+    margin-top: unset;
     .nav-item .nav-link.active:hover, .nav-item .nav-link.active:focus {
       color: $white;
     }
