3417941: Updates the css files for the styling I created

--- a/web/themes/custom/provus_bootstrap/scss/components/_google-translator.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_google-translator.scss
@@ -8,3 +8,9 @@
     padding: 10px !important;
   }
 }
+.goog-te-gadget  {
+  color: $white !important;
+  a {
+    color: $white !important;
+  }
+}
