--- a/web/themes/custom/provus_bootstrap/scss/layout/_navigation.scss
+++ b/web/themes/custom/provus_bootstrap/scss/layout/_navigation.scss
@@ -39,3 +39,31 @@
     filter: brightness(0) saturate(100%) invert(100%) sepia(94%) saturate(0%) hue-rotate(248deg) brightness(106%) contrast(106%);
   }
 }
+
+.region-secondary-menu {
+  display: flex;
+  flex-wrap: nowrap;
+  .google-translator-switch {
+    position: relative;
+    font-family: $btn-font-family;
+    font-weight: $btn-font-weight;
+    line-height: $btn-line-height;
+    text-align: center;
+    text-decoration: if($link-decoration ==none, null, none);
+    white-space: $btn-white-space;
+    vertical-align: middle;
+    cursor: if($enable-button-pointers, pointer, null);
+    user-select: none;
+    background-color: $background-white;
+    border: $btn-border-width solid transparent;
+    @include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $btn-border-radius);
+    @include transition($btn-transition);
+  }
+  .block-google-translator {
+    width: auto;
+    margin-top: rem-calc(4);
+  }
+}
+.system-menu-blockaccount {
+  width: auto;
+}
