--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-card--provus-display-provus-card-bg.html.twig
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-card--provus-display-provus-card-bg.html.twig
@@ -48,11 +48,17 @@
     <a href="{{ content.field_provus_links[0]['#url'] }}">
   {% endif %}
       {% block content %}
-        <div{{ content_attributes.addClass('card') }} style="background-image:url('{{ file_url(content.field_provus_media_image.0['#item'].entity.uri.value | image_style('provus_square_medium')) }}');">
+        <div{{ content_attributes.addClass('card') }}>
+          <div class="card-img-wrapper">
+            <div class="card-img" style="background-image:url('{{ file_url(content.field_provus_media_image.0['#item'].entity.uri.value | image_style('provus_card_background')) }}')"></div>
+          </div>
           <div class="card-img-overlay">
             <div class="card-body">
               {% if content.field_provus_title|render %}
                 <h3 class="card-title">{{ content.field_provus_title }}</h3>
+                <div class="arrow-right">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </div>
               {% endif %}
             </div>
           </div>
