--- a/web/themes/custom/provus_bootstrap/scss/components/_cards.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_cards.scss
@@ -90,11 +90,27 @@
 // Card bg.
 .card-wrapper.provus-card-bg {
   .card {
-    min-height: 240px;
+    min-height: rem-calc(240);
     border-radius: $card-border-radius;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+  }
+  .card-img-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    .card-img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: all 0.3s ease-in-out;
+    }
   }
   .card-img-overlay {
     background: rgba(0, 0, 0, 0.5);
@@ -107,10 +123,46 @@
       font-weight: 700;
     }
   }
-  a:hover {
+  a {
     .card-img-overlay {
-      background: rgba(41, 62, 122, 0.85);
+      transition: all 0.3s ease-in-out;
     }
+    .card-body {
+      position: relative;
+      padding: rem-calc(10 15);
+      h3.card-title {
+        margin: 0;
+        width: 100%;
+        padding-right: rem-calc(30);
+      }
+      .arrow-right {
+        color: $secondary-accent;
+        opacity: 0;
+        transition: all 0.3s ease-in-out;
+        position: absolute;
+        bottom: rem-calc(15);
+        right: rem-calc(20);
+        svg {
+          font-size: rem-calc(18);
+          height: rem-calc(16);
+          width: rem-calc(14);
+        }
+      }
+    }
+
+    &:hover,
+    &:focus {
+      .card-img-overlay {
+        background: rgba(28,43,84, 0.85);
+      }
+      .card-img {
+        transform: scale(1.05);
+      }
+      .card-body .arrow-right {
+        opacity: 1;
+      }
+    }
+
   }
 }
 
