--- a/web/profiles/provus/modules/custom/provus_ext/provus_person/templates/node--provus-person--full.html.twig
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_person/templates/node--provus-person--full.html.twig
@@ -88,33 +88,26 @@
     <div class="article-body-wrapper person-node">
       <div class="person-header">
         <div class="row">
-          <div class="col-md-9">
-            <div class="row">
-              <div class="col-md-4">
-                <div class="person-image">
-                  {{ content.field_provus_media_image }}
-                </div>
-              </div>
-              <div class="col-md-8">
+          <div class="col-md-8">
                 <h1>{{ label }}</h1>
                 <h2>{{ content.field_provus_titles }}</h2>
+                <div class="node__content clearfix">
+                  <div class="content-body">
+                    {{ content.body }}
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="email">
-              <span class="far fa-envelope"></span>{{ content.field_provus_email }}
+          <div class="col-md-4">
+            <div class="person-image">
+                    {{ content.field_provus_media_image }}
+              </div>
+              <div class="email">
+                <div class="email-wrapper"><span class="far fa-envelope"></span></div>{{ content.field_provus_email }}
             </div>
             <div class="phone">
-              <span class="fas fa-phone"></span>{{ content.field_provus_telephone }}
+              <div class="phone-wrapper"><span class="fas fa-phone"></span></div>{{ content.field_provus_telephone }}
             </div>
           </div>
-        </div>
-      </div>
-      <div class="node__content clearfix">
-        <div class="content-body">
-          <h2>{{ 'Person details'|t }}</h2>
-          {{ body }}
         </div>
       </div>
     </div>
