Issue 3427269: Styling Card Tall view

--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-card--provus-display-provus-card-tall.html.twig
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/templates/block--provus-card--provus-display-provus-card-tall.html.twig
@@ -46,20 +46,24 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
+    <a href="{{ content.field_provus_links[0]['#url'] }}" rel="bookmark">
     <div{{ content_attributes.addClass('card') }}>
       {% if content.field_provus_media_image|render %}
         <div class="card-img-top">
-          {{ content.field_provus_media_image }}
+          <img src="{{ file_url(content.field_provus_media_image.0['#item'].entity.uri.value | image_style('provus_card_tall')) }}" alt="card-image" />
         </div>
       {% endif %}
       <div class="card-body">
-        {% if content.date|render %}
+        {% if content.date is not empty %}
           <div class="card-date">{{ content.date }}</div>
+        {% elseif content.field_provus_header|render %}
+          <div class="card-date">{{ content.field_provus_header }}</div>
         {% endif %}
         {% if content.field_provus_title|render %}
-          <h3 class="card-title"><a href="{{ content.field_provus_links[0]['#url'] }}" rel="bookmark">{{ content.field_provus_title }}</a></h3>
+          <h3 class="card-title">{{ content.field_provus_title }}</h3>
         {% endif %}
       </div>
     </div>
+    </a>
   {% endblock %}
 </div>
