--- a/web/themes/custom/provus_bootstrap/scss/components/_cards.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_cards.scss
@@ -194,20 +194,14 @@
 .provus-card-tall {
   .card {
     border: none;
+    box-shadow: none;
   }
   .card-body {
     padding: 0;
   }
   .card-title {
     margin-top: rem-calc(8);
-    a {
-      color: $text-primary;
-      text-decoration: none;
-      &:hover {
-        color: $primary-shade;
-        text-decoration: underline;
-      }
-    }
+    font-size: $h5-font-size;
   }
   .card-date {
     margin: rem-calc(16 0 8);
@@ -217,6 +211,18 @@
   }
   .card-img-top {
     border-radius: $card-border-radius;
+  }
+  a {
+    color: $text-primary;
+    text-decoration: none;
+    &:hover {
+      color: $primary-shade;
+      text-decoration: none;
+
+      .card-img-top {
+        box-shadow: 0px 0px 4px 0px $black;
+      }
+    }
   }
 }
 
