Issue 3427269: Card styling php error fixes

--- a/web/profiles/provus/modules/custom/provus_core/templates/node--provus-card-tall.html.twig
+++ b/web/profiles/provus/modules/custom/provus_core/templates/node--provus-card-tall.html.twig
@@ -82,14 +82,16 @@
   {% block content %}
     <a href="{{ url }}" rel="bookmark">
     <div{{ content_attributes.addClass('card') }}>
-      {% if content.image_uri is not empty %}
+      {% if content_image_uri %}
         <div class="card-img-top">
-          <img src="{{ content.image_uri | image_style('provus_card_tall') }}" alt="card-image" />
+          <img src="{{ content_image_uri | image_style('provus_card_tall') }}" alt="card-image" />
         </div>
       {% endif %}
       <div class="card-body">
-        {% if content.date|render %}
-          <div class="card-date">{{ content.date|format_date('provus_event_date') }}</div>
+        {% if content_date %}
+          <div class="card-date">{{ content_date }}</div>
+        {% elseif content.date|render %}
+          <div class="card-date">{{ content.date }}</div>
         {% endif %}
         <h3 class="card-title">{{ label }}</h3>
       </div>
