--- a/web/themes/custom/provus_bootstrap/scss/components/_cards.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_cards.scss
@@ -2,6 +2,8 @@
 .card-wrapper {
   width: 100%;
   margin-bottom: 20px;
+  height: calc(100% - 20px);
+
 }
 
 .card-img-top {
@@ -170,12 +172,15 @@
 .card-wrapper {
   &.provus-card-left,
   &.provus-card-right {
+    .card-title {
+      width: auto;
+    }
     .card-img {
       height: 100%;
       div {
         height: 100%;
         img {
-          height: 100%;
+          height: 418px;
           object-fit: cover;
         }
       }
@@ -348,6 +353,38 @@
       &-title {
         margin-top: 0;
         margin-bottom: rem-calc(6);
+      }
+    }
+  }
+}
+
+.block-inline-blockprovus-group,
+.block-inline-blockprovus-group-automatic {
+  .col {
+    display: flex;
+    flex-direction: row;
+    .card-wrapper {
+      display: flex;
+      .card {
+        display: flex;
+        flex-direction: column;
+        .card-img-top {
+          height: auto;
+        }
+        .card-body {
+          flex-grow: 1;
+          display: flex;
+          flex-direction: column;
+          .card-title {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+          }
+          .card-text {
+            flex-grow: 1;
+            width: 100%;
+          }
+        }
       }
     }
   }
